force-app/main/default/objects/Window_Configuration__c/Window_Configuration__c.object-meta.xml
<CustomObject>
    <label>Window Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Window Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>