force-app/main/default/objects/Window_Configuration__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Clients__c</referenceTo>
    <relationshipLabel>Window Configurations</relationshipLabel>
    <relationshipName>Window_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>