force-app/main/default/objects/Window_Configuration__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>Day</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>