force-app/main/default/objects/Window_Configuration__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>