force-app/main/default/objects/Window_Configuration__c/fields/Schedule_From__c.field-meta.xml
<CustomField>
    <fullName>Schedule_From__c</fullName>
    <label>Schedule From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Quarter</fullName>
            </value>
            <value>
                <fullName>Current Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>