force-app/main/default/objects/Window_Configuration__c/fields/Window_Type__c.field-meta.xml
<CustomField>
    <fullName>Window_Type__c</fullName>
    <label>Window Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instruction Window</fullName>
            </value>
            <value>
                <fullName>Invoicing Window</fullName>
            </value>
            <value>
                <fullName>Payment Window</fullName>
            </value>
            <value>
                <fullName>Renewal Window</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>